[gd_scene load_steps=4 format=3 uid="uid://cpxh5hbpbrlae"]

[ext_resource type="Script" path="res://Main.gd" id="1_537cu"]
[ext_resource type="PackedScene" uid="uid://dndmrhxy0lg5b" path="res://world_environment.tscn" id="1_v4ulg"]
[ext_resource type="PackedScene" uid="uid://uvw14dohnkyn" path="res://item.tscn" id="3_ug6o5"]

[node name="Main" type="Node"]
script = ExtResource("1_537cu")

[node name="Game" type="Node3D" parent="."]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Game"]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="Ground" parent="Game" instance=ExtResource("1_v4ulg")]
script = null

[node name="Item" parent="Game" instance=ExtResource("3_ug6o5")]

[node name="MainMenu" type="Node" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="MainMenu"]

[node name="MainMenu" type="PanelContainer" parent="MainMenu/CanvasLayer"]
custom_minimum_size = Vector2(500, 200)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -59.0
offset_top = -97.0
offset_right = 59.0
offset_bottom = 97.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MainMenu/CanvasLayer/MainMenu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/CanvasLayer/MainMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="MainMenu/CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"
horizontal_alignment = 1

[node name="HostButton" type="Button" parent="MainMenu/CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="JoinButton" type="Button" parent="MainMenu/CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="AddressEntry" type="LineEdit" parent="MainMenu/CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter Address"
alignment = 1

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://player.tscn")
spawn_path = NodePath("..")

[connection signal="pressed" from="MainMenu/CanvasLayer/MainMenu/MarginContainer/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="MainMenu/CanvasLayer/MainMenu/MarginContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
